2006-01-24 04:09:05  Sean Middleditch <elanthis@awesomeplay.com>

  * Add beginning of database backend.
  * Depend on sqlite3.

2006-01-23 17:36:03  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove the .in data files.
  * Make System::get_oparg return intptr_t, not int, so we work
    on 64-bit systems properly.
  * Change the String operator[] definition a bit so that we work
    on more G++ versions.
  * Fix fileobj.cc in read_token to use ints rather than chars,
    so we don't crash on OpenPOWER.

2006-01-22 07:02:06  Sean Middleditch <elanthis@awesomeplay.com>

  * Minor documentation additions.
  * Remove builder vision.  We so don't use that crap.
  * Removed script-intr.xml to bindings.xml.
  * Renamed common/awestr.h to common/string.h, common/aweregex.h
    to common/regex.h, and scriptix/sxstring.h to scriptix/string.h.

2006-01-21 16:41:15  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove dependency on libtool.  We don't actually build any
    libraries, so we don't need it.

2006-01-21 16:31:50  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed the chpass command, trying to remove the IProcessor
    stuff, it's unclean.
  * Don't build-depend on bison, flex, or xsltproc.  Only people
    wanting to hack on the source will need those utilities.
    This makes installing AweMUD a lot easier, especially on
    older/non-gnu systems.

2006-01-21 04:56:03  Sean Middleditch <elanthis@awesomeplay.com>

  * OS X 10.3's compiler was being a dork, these fixes make it
    stop being a dork, which makes me happy.

2006-01-21 04:30:48  Sean Middleditch <elanthis@awesomeplay.com>

  * Darwin/OS X requires sys/types.h to be included before regex.h.

2006-01-21 03:14:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Make all accept()ed sockets non-blocking.
  * Remove include/scriptix/scriptix.h.
  * Remove the -Iinclude/common -Iinclude/mud -Iinclude/scriptix
    compile flags, forcing all includes to specify the source
    module.