@@ -1,0 +1,7 @@
+INSERT INTO objects VALUES(1, 'root');
+INSERT INTO properties VALUES(1, 'name', 'Example World');
+
+INSERT INTO objects VALUES(2, 'room');
+INSERT INTO properties VALUES(2, 'name', 'Dark Forest');
+INSERT INTO properties VALUES(2, 'description', 'The charcoal branches of gnarled trees reach down to the swampy earth as if to snatch up and devour any passersby.  The forest is quiet as death; even the wind is afraid to enter the dark wood.  The smell of rot hangs in the stagnant air.');
+INSERT INTO properties VALUES(2, 'outdoors', 'true');
